Hide navbox on mobile, fix

--- a/css_reworks/Vector.css
+++ b/css_reworks/Vector.css
@@ -3634,7 +3634,7 @@ div.gallerytext {
 }
 @media screen and (max-width: 720px) {
     /* Hide [[Template:Navbox]] like Wikipedia does; those tables would be a pain to fix right */
-    .navbox {
+    #content .navbox {
         display: none;
     }
 
